Add name property to maven modules

--- a/example/pom.xml
+++ b/example/pom.xml
@@ -3,10 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>rg-github-release-example</artifactId>
   <groupId>com.ragedunicorn.tools.maven</groupId>
+  <artifactId>rg-github-release-example</artifactId>
   <packaging>jar</packaging>
   <version>0.0.1-SNAPSHOT</version>
+  <name>rg-github-release-example</name>
 
   <build>
     <plugins>
