--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -4,6 +4,7 @@
   <artifactId>rg-github-release-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <version>0.0.1-SNAPSHOT</version>
+  <name>rg-github-release-maven-plugin</name>
 
   <parent>
     <groupId>com.ragedunicorn.tools.maven</groupId>
