--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,13 @@
           <includeFilterFile>findbugs-include.xml</includeFilterFile>
         </configuration>
         -->
+        <dependencies>
+          <dependency>
+            <groupId>com.ragedunicorn.tools.maven</groupId>
+            <artifactId>maven-code-quality</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
