--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,37 @@
   <packaging>maven-plugin</packaging>
   <name>rg-github-release-plugin</name>
 
+  <licenses>
+    <license>
+      <name>MIT License</name>
+      <url>http://opensource.org/licenses/MIT</url>
+      <distribution>repo</distribution>
+      <comments>A short, permissive software license. Basically, you can do whatever you want as long as you include the
+        original copyright and license notice in any copy of the software/source.
+      </comments>
+    </license>
+  </licenses>
+
+  <organization>
+    <name>RagedUnicorn</name>
+    <url>http://ragedunicorn.com</url>
+  </organization>
+
+  <developers>
+    <developer>
+      <id>mwiesendanger</id>
+      <name>Michael Wiesendanger</name>
+      <email>michael.wiesendanger@gmail.com</email>
+      <url>http://ragedunicorn.com</url>
+      <organization>RagedUnicorn</organization>
+      <organizationUrl>http://ragedunicorn.com</organizationUrl>
+      <roles>
+        <role>developer</role>
+      </roles>
+      <timezone>Switzerland/Zurich</timezone>
+    </developer>
+  </developers>
+
   <properties>
     <checkstyle.config.location>checkstyle.xml</checkstyle.config.location>
     <checkstyle.header.location>LICENSE.txt</checkstyle.header.location>
