--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
           <dependency>
             <groupId>com.ragedunicorn.tools.maven</groupId>
             <artifactId>maven-code-quality</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
           </dependency>
           <dependency>
             <groupId>com.puppycrawl.tools</groupId>
@@ -94,7 +94,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pmd-plugin</artifactId>
-        <version>3.8</version>
+        <version>3.10.0</version>
         <configuration>
           <rulesets>
             <ruleset>pmd-ruleset.xml</ruleset>
@@ -105,8 +105,19 @@
           <dependency>
             <groupId>com.ragedunicorn.tools.maven</groupId>
             <artifactId>maven-code-quality</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>1.0.0</version>
           </dependency>
+          <dependency>
+            <groupId>net.sourceforge.pmd</groupId>
+            <artifactId>pmd-vm</artifactId>
+            <version>6.6.0</version>
+          </dependency>
+          <dependency>
+            <groupId>net.sourceforge.pmd</groupId>
+            <artifactId>pmd-xml</artifactId>
+            <version>6.6.0</version>
+          </dependency>
+
         </dependencies>
       </plugin>
       <plugin>
@@ -123,7 +134,7 @@
           <dependency>
             <groupId>com.ragedunicorn.tools.maven</groupId>
             <artifactId>maven-code-quality</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
           </dependency>
         </dependencies>
       </plugin>
