Simplify artifact identifier for project * No need to have an additional rg in the artifact name. The group id already shows that it belongs to ragedunicorn

--- a/example/pom.xml
+++ b/example/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.ragedunicorn.tools.maven</groupId>
-  <artifactId>rg-github-release-example</artifactId>
+  <artifactId>github-release-example</artifactId>
   <packaging>jar</packaging>
   <version>0.0.1-SNAPSHOT</version>
 
@@ -47,7 +47,7 @@
     <plugins>
       <plugin>
         <groupId>com.ragedunicorn.tools.maven</groupId>
-        <artifactId>rg-github-release-maven-plugin</artifactId>
+        <artifactId>github-release-maven-plugin</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <executions>
           <execution>
@@ -77,7 +77,7 @@
   <dependencies>
     <dependency>
       <groupId>com.ragedunicorn.tools.maven</groupId>
-      <artifactId>rg-github-release-maven-plugin</artifactId>
+      <artifactId>github-release-maven-plugin</artifactId>
       <version>[version]</version>
     </dependency>
   </dependencies>
