Update version and add dependency for javadoc generation

--- a/pom.xml
+++ b/pom.xml
@@ -1,295 +1,303 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.ragedunicorn.tools.maven</groupId>
-  <artifactId>github-release-maven-plugin</artifactId>
-  <version>1.0.2-SNAPSHOT</version>
-  <packaging>maven-plugin</packaging>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.ragedunicorn.tools.maven</groupId>
+	<artifactId>github-release-maven-plugin</artifactId>
+	<version>1.0.2-SNAPSHOT</version>
+	<packaging>maven-plugin</packaging>
 
-  <name>${project.groupId}:${project.artifactId}</name>
-  <description>Maven plugin for creating GitHub releases</description>
-  <url>https://github.com/RagedUnicorn/github-release-maven-plugin</url>
+	<name>${project.groupId}:${project.artifactId}</name>
+	<description>Maven plugin for creating GitHub releases</description>
+	<url>https://github.com/RagedUnicorn/github-release-maven-plugin</url>
 
-  <licenses>
-    <license>
-      <name>MIT License</name>
-      <url>http://opensource.org/licenses/MIT</url>
-      <distribution>repo</distribution>
-      <comments>A short, permissive software license. Basically, you can do whatever you want as long as you include the
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>http://opensource.org/licenses/MIT</url>
+			<distribution>repo</distribution>
+			<comments>A short, permissive software license. Basically, you can do whatever you want as long as you include the
         original copyright and license notice in any copy of the software/source.
       </comments>
-    </license>
-  </licenses>
+		</license>
+	</licenses>
 
-  <organization>
-    <name>RagedUnicorn</name>
-    <url>http://ragedunicorn.com</url>
-  </organization>
+	<organization>
+		<name>RagedUnicorn</name>
+		<url>http://ragedunicorn.com</url>
+	</organization>
 
-  <developers>
-    <developer>
-      <id>mwiesendanger</id>
-      <name>Michael Wiesendanger</name>
-      <email>michael.wiesendanger@gmail.com</email>
-      <url>http://ragedunicorn.com</url>
-      <organization>RagedUnicorn</organization>
-      <organizationUrl>http://ragedunicorn.com</organizationUrl>
-      <roles>
-        <role>developer</role>
-      </roles>
-      <timezone>Switzerland/Zurich</timezone>
-    </developer>
-  </developers>
+	<developers>
+		<developer>
+			<id>mwiesendanger</id>
+			<name>Michael Wiesendanger</name>
+			<email>michael.wiesendanger@gmail.com</email>
+			<url>http://ragedunicorn.com</url>
+			<organization>RagedUnicorn</organization>
+			<organizationUrl>http://ragedunicorn.com</organizationUrl>
+			<roles>
+				<role>developer</role>
+			</roles>
+			<timezone>Switzerland/Zurich</timezone>
+		</developer>
+	</developers>
 
-  <scm>
-    <connection>scm:git:git://github.com/RagedUnicorn/github-release-maven-plugin.git</connection>
-    <developerConnection>scm:git:ssh://github.com:RagedUnicorn/github-release-maven-plugin.git</developerConnection>
-    <url>https://github.com/RagedUnicorn/github-release-maven-plugin/tree/master</url>
-  </scm>
+	<scm>
+		<connection>scm:git:git://github.com/RagedUnicorn/github-release-maven-plugin.git</connection>
+		<developerConnection>scm:git:ssh://github.com:RagedUnicorn/github-release-maven-plugin.git</developerConnection>
+		<url>https://github.com/RagedUnicorn/github-release-maven-plugin/tree/master</url>
+	</scm>
 
-  <distributionManagement>
-    <snapshotRepository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-    <repository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-    </repository>
-  </distributionManagement>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+		</repository>
+	</distributionManagement>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <gpg.keyname>488C9072D9E5426B</gpg.keyname>
-    <checkstyle.config.location>checkstyle.xml</checkstyle.config.location>
-    <checkstyle.header.location>LICENSE.txt</checkstyle.header.location>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<gpg.keyname>488C9072D9E5426B</gpg.keyname>
+		<checkstyle.config.location>checkstyle.xml</checkstyle.config.location>
+		<checkstyle.header.location>LICENSE.txt</checkstyle.header.location>
+	</properties>
 
-  <profiles>
-    <profile>
-      <id>development</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <properties>
-        <skip.sign.gpg>true</skip.sign.gpg>
-        <skip.package.javadoc>true</skip.package.javadoc>
-        <skip.package.sources>true</skip.package.sources>
-      </properties>
-    </profile>
-    <profile>
-      <id>release</id>
-      <properties>
-        <skip.sign.gpg>true</skip.sign.gpg>
-        <skip.package.javadoc>true</skip.package.javadoc>
-        <skip.package.sources>true</skip.package.sources>
-      </properties>
-    </profile>
-    <profile>
-      <id>deploy</id>
-      <properties>
-        <skip.sign.gpg>false</skip.sign.gpg>
-        <skip.package.javadoc>false</skip.package.javadoc>
-        <skip.package.sources>false</skip.package.sources>
-      </properties>
-    </profile>
-  </profiles>
+	<profiles>
+		<profile>
+			<id>development</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<skip.sign.gpg>true</skip.sign.gpg>
+				<skip.package.javadoc>true</skip.package.javadoc>
+				<skip.package.sources>true</skip.package.sources>
+			</properties>
+		</profile>
+		<profile>
+			<id>release</id>
+			<properties>
+				<skip.sign.gpg>true</skip.sign.gpg>
+				<skip.package.javadoc>true</skip.package.javadoc>
+				<skip.package.sources>true</skip.package.sources>
+			</properties>
+		</profile>
+		<profile>
+			<id>deploy</id>
+			<properties>
+				<skip.sign.gpg>false</skip.sign.gpg>
+				<skip.package.javadoc>true</skip.package.javadoc>
+				<skip.package.sources>false</skip.package.sources>
+			</properties>
+		</profile>
+	</profiles>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-plugin-plugin</artifactId>
-        <version>3.5.2</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-gpg-plugin</artifactId>
-        <version>1.6</version>
-        <executions>
-          <execution>
-            <id>sign-artifacts</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>sign</goal>
-            </goals>
-            <configuration>
-              <skip>${skip.sign.gpg}</skip>
-              <keyname>${gpg.keyname}</keyname>
-              <passphraseServerId>${gpg.keyname}</passphraseServerId>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>3.0.1</version>
-        <executions>
-          <execution>
-            <id>attach-sources</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-            <configuration>
-              <skipSource>${skip.package.sources}</skipSource>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.0.1</version>
-        <executions>
-          <execution>
-            <id>attach-javadocs</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-            <configuration>
-              <skip>${skip.package.javadoc}</skip>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.sonatype.plugins</groupId>
-        <artifactId>nexus-staging-maven-plugin</artifactId>
-        <version>1.6.8</version>
-        <extensions>true</extensions>
-        <configuration>
-          <serverId>ossrh</serverId>
-          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-          <autoReleaseAfterClose>false</autoReleaseAfterClose>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>3.0.0</version>
-        <dependencies>
-          <dependency>
-            <groupId>com.ragedunicorn.tools.maven</groupId>
-            <artifactId>maven-code-quality</artifactId>
-            <version>1.0.1</version>
-          </dependency>
-          <dependency>
-            <groupId>com.puppycrawl.tools</groupId>
-            <artifactId>checkstyle</artifactId>
-            <version>8.18</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-pmd-plugin</artifactId>
-        <version>3.10.0</version>
-        <configuration>
-          <rulesets>
-            <ruleset>pmd-ruleset.xml</ruleset>
-          </rulesets>
-          <printFailingErrors>true</printFailingErrors>
-        </configuration>
-        <dependencies>
-          <dependency>
-            <groupId>com.ragedunicorn.tools.maven</groupId>
-            <artifactId>maven-code-quality</artifactId>
-            <version>1.0.1</version>
-          </dependency>
-          <dependency>
-            <groupId>net.sourceforge.pmd</groupId>
-            <artifactId>pmd-vm</artifactId>
-            <version>6.6.0</version>
-          </dependency>
-          <dependency>
-            <groupId>net.sourceforge.pmd</groupId>
-            <artifactId>pmd-xml</artifactId>
-            <version>6.6.0</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-    </plugins>
-  </build>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.6.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-plugin-plugin</artifactId>
+				<version>3.5.2</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+						<configuration>
+							<skip>${skip.sign.gpg}</skip>
+							<keyname>${gpg.keyname}</keyname>
+							<passphraseServerId>${gpg.keyname}</passphraseServerId>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>3.0.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+						<configuration>
+							<skipSource>${skip.package.sources}</skipSource>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.1.1</version>
+				<dependencies>
+					<dependency>
+					  <groupId>org.apache.commons</groupId>
+					  <artifactId>commons-compress</artifactId>
+					  <version>1.19</version>
+					</dependency>				
+				</dependencies>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+						<configuration>
+							<skip>${skip.package.javadoc}</skip>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.8</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>false</autoReleaseAfterClose>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>3.0.0</version>
+				<dependencies>
+					<dependency>
+						<groupId>com.ragedunicorn.tools.maven</groupId>
+						<artifactId>maven-code-quality</artifactId>
+						<version>1.0.1</version>
+					</dependency>
+					<dependency>
+						<groupId>com.puppycrawl.tools</groupId>
+						<artifactId>checkstyle</artifactId>
+						<version>8.18</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>3.10.0</version>
+				<configuration>
+					<rulesets>
+						<ruleset>pmd-ruleset.xml</ruleset>
+					</rulesets>
+					<printFailingErrors>true</printFailingErrors>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>com.ragedunicorn.tools.maven</groupId>
+						<artifactId>maven-code-quality</artifactId>
+						<version>1.0.1</version>
+					</dependency>
+					<dependency>
+						<groupId>net.sourceforge.pmd</groupId>
+						<artifactId>pmd-vm</artifactId>
+						<version>6.6.0</version>
+					</dependency>
+					<dependency>
+						<groupId>net.sourceforge.pmd</groupId>
+						<artifactId>pmd-xml</artifactId>
+						<version>6.6.0</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+		</plugins>
+	</build>
 
-  <reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jxr-plugin</artifactId>
-        <version>2.5</version>
-      </plugin>
-    </plugins>
-  </reporting>
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+				<version>2.5</version>
+			</plugin>
+		</plugins>
+	</reporting>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-plugin-api</artifactId>
-      <version>3.5.4</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-core</artifactId>
-      <version>3.5.4</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-compat</artifactId>
-      <version>3.5.4</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven.plugin-tools</groupId>
-      <artifactId>maven-plugin-annotations</artifactId>
-      <version>3.5.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <version>1.7.25</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.8.5</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
-      <version>4.5.6</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpmime</artifactId>
-      <version>4.5.3</version>
-    </dependency>
-    <dependency>
-      <groupId>javax.ws.rs</groupId>
-      <artifactId>jsr311-api</artifactId>
-      <version>1.1.1</version>
-    </dependency>
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-plugin-api</artifactId>
+			<version>3.5.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-core</artifactId>
+			<version>3.5.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-compat</artifactId>
+			<version>3.5.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugin-tools</groupId>
+			<artifactId>maven-plugin-annotations</artifactId>
+			<version>3.5.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.25</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpmime</artifactId>
+			<version>4.5.3</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>jsr311-api</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven.plugin-testing</groupId>
-      <artifactId>maven-plugin-testing-harness</artifactId>
-      <version>3.3.0</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugin-testing</groupId>
+			<artifactId>maven-plugin-testing-harness</artifactId>
+			<version>3.3.0</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
